# git-jenga

./: README.md  api.txt  file.txt  git-restack.cabal  layer3.txt  layer5.txt  test-plan.yml  ui.txt
.github/workflows/: ci.yml
app/: Main.hs
hs-src/GitRestack/: Apply.hs  Cleanup.hs  Conflict.hs  Diff.hs  Exec.hs  Git.hs  Nuke.hs  Plan.hs  Stack.hs  Status.hs  Step.hs  Types.hs  Utils.hs  Yaml.hs
scripts/: run_real_world_tests.sh  setup-git-jenga-test-add-add-binary.sh  setup-git-jenga-test-advanced.sh  setup-git-jenga-test-crlf-conflict.sh  setup-git-jenga-test-delete-modify.sh  setup-git-jenga-test-dir-rename.sh  setup-git-jenga-test-empty-cherry-pick.sh  setup-git-jenga-test-filemode-conflict.sh  setup-git-jenga-test-fix-apply.sh  setup-git-jenga-test-iterative-conflicts.sh  setup-git-jenga-test-multi-conflict.sh  setup-git-jenga-test-rename-add.sh  setup-git-jenga-test-rename-delete.sh  setup-git-jenga-test-rename-modify.sh  setup-git-jenga-test-rename-rename.sh  setup-git-jenga-test-space-file-dir.sh  setup-git-jenga-test-space-text-conflict.sh  setup-git-jenga-test-submodule-conflict.sh  setup-git-jenga-test-submodule-delete.sh  setup-git-jenga-test-submodule-text-mix.sh  setup-git-jenga-test-symlink-conflict.sh  setup-git-jenga-test-text-binary-conflict.sh  setup-git-jenga-test.sh
src/: main.zig  types.zig
src/cli/: apply.zig  cleanup.zig  exec.zig  nuke.zig  plan.zig  stack.zig  status.zig  step.zig
src/git/: diff.zig  stack.zig
src/utils/: process.zig
src/yaml/: emitter.zig  (+1 more)
test/: integration_test.zig  run_integration_tests.sh  run_real_world_tests.sh
(+35 files in other folders)
